# elektroid

./: CMakeLists.txt  Makefile.am  README.md  configure.ac
docs/: installation.md
man/: CMakeLists.txt  Makefile.am
po/: CMakeLists.txt
res/: CMakeLists.txt  Makefile.am
res/elektron/: devices.json
src/: CMakeLists.txt  Makefile.am  backend.c  backend.h  backend_alsa.c  backend_rtmidi.c  elektroid-cli.c  utils.c  utils.h
src/connectors/: efactor.c  elektron.c  elektron_pkg.c  logue.c  system.c
src/mactions/: autosampler.c  microbrute.c
